--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,7 @@ author:
   name             : *name # *name is a YAML reference pointing to the &anchor earlier
   avatar           : "/assets/images/salvador-lavid.jpg"
   bio              : "IT enthusiast"
-  location         : "Santander, SPAIN"
+  location         : "Santander, Spain"
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
