--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -24,7 +24,7 @@ main:
     url: /
   - title: "About me"
     url: /about-me/
-  - title: "Resumé"
+  - title: "Résumé"
     url: /resume/
 
 # documentation links
